using original version of NVD3 as required changes were added

--- a/css/main.css
+++ b/css/main.css
@@ -1,72 +1,76 @@
 .chart-container {
-	position: absolute;
-	top: 60px;
-	left: 20px;
-	right: 20px;
-	bottom: 20px;
+  position: absolute;
+  top: 60px;
+  left: 20px;
+  right: 20px;
+  bottom: 20px;
   overflow: hidden;
   z-index: -1;
 }
 
-  .back {
-    z-index: -1;
-  }
+.back {
+  z-index: -1;
+}
 
-  .chart {
-      position: absolute;
-  }
-
-  .cell {
-    font: 10px sans-serif;
-    line-height: 12px;
-    overflow: hidden;
+.chart {
     position: absolute;
-    text-indent: 2px;
+}
+
+.cell {
+  font: 10px sans-serif;
+  line-height: 12px;
+  overflow: hidden;
+  position: absolute;
+  text-indent: 2px;
+}
+
+.legend {
+  position: absolute;
+  top: 60px;
+  right: 50px;
+  list-style-type: square;
+}
+
+.multiBarWithLegend .x { 
+  display: none;
+}
+
+.stats {
+  position: absolute;
+  top: 25px;
+  right: 20px;
+}
+
+  .stats td {
+    padding: 4px;
   }
 
-  .legend {
-    position: absolute;
-    top: 60px;
-    right: 50px;
-    list-style-type: square;
+  .stats .name {
+    text-align: center;
   }
 
-  .stats {
-    position: absolute;
-    top: 25px;
-    right: 20px;
+  .stats .number {
+    text-align: center;
   }
 
-    .stats td {
-      padding: 4px;
-    }
+  .stats .toxicity {
+    width: 100px;
+    text-align: center;
+  }
 
-    .stats .name {
-      text-align: center;
-    }
+  .stats .lines {
+    width: 100px;
+    text-align: center;  
+  }
 
-    .stats .number {
-      text-align: center;
-    }
+  .stats .lines-per-method {
+    width: 130px;  
+  }
 
-    .stats .toxicity {
-      width: 100px;
-      text-align: center;
-    }
+  .stats .complexity {
+    width: 161px;  
+  }
 
-    .stats .lines {
-      width: 100px;
-      text-align: center;  
-    }
-
-    .stats .lines-per-method {
-      width: 130px;  
-    }
-
-    .stats .complexity {
-      width: 161px;  
-    }
-
-    .stats .coupling {
-      width: 104px;  
-    }
+  .stats .coupling {
+    width: 104px;  
+  }
